# golem-client-generation-experiment

./: .envrc  .gitignore  Cargo.toml  golem.yaml
test-bar/: Cargo.toml
test-bar/src/: lib.rs
test-bar/wit/: test-bar.wit
test-foo/: Cargo.toml
test-foo/src/: lib.rs
test-foo/wit/: test-foo.wit
wit-generated/test-bar/: impl.wit
wit-generated/test-bar-api/: impl.wit
wit-generated/test-composition/: universe.wit
wit-generated/test-foo/: impl.wit
wit-generated/test-foo-api/: impl.wit
wit-generated/test-types/: impl.wit
